@@ -1,5 +1,5 @@
 #
-# $Id: altTheme.tcl,v 1.1 2006/10/31 01:42:26 hobbs Exp $
+# $Id: altTheme.tcl,v 1.2 2006/11/24 18:04:14 jenglish Exp $
 #
 # Ttk widget set: Alternate theme
 #
@@ -49,7 +49,8 @@ namespace eval ttk::theme::alt {
 	style map TRadiobutton -indicatorcolor \
 	    [list  disabled $colors(-frame)  pressed $colors(-frame)]
 
-	style configure TMenubutton -width -11 -padding "3 3" -relief raised
+	style configure TMenubutton \
+	    -width -11 -padding "3 3" -relief raised -anchor w
 
 	style configure TEntry -padding 1
 	style map TEntry -fieldbackground \
