@@ -1,5 +1,5 @@
 #
-# $Id: xpTheme.tcl,v 1.1 2006/10/31 01:42:27 hobbs Exp $
+# $Id: xpTheme.tcl,v 1.2 2006/11/24 18:04:14 jenglish Exp $
 #
 # Ttk widget set: XP Native theme
 #
@@ -24,7 +24,7 @@ namespace eval ttk {
 	style configure TButton -padding {1 1} -width -11
 	style configure TRadiobutton -padding 2
 	style configure TCheckbutton -padding 2
-	style configure TMenubutton -padding {8 4}
+	style configure TMenubutton -padding {8 4} -anchor w
 
 	style configure TNotebook -tabmargins {2 2 2 0}
 	style map TNotebook.Tab \
